--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/55a94f0e16.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -14,10 +15,42 @@
 
 <body>
 
-    <div class="jumbotron" id="NewYorkTimesJumbo">New York Times Search</div>
+    <div class="jumbotron" id="NewYorkTimesJumbo"><i class="far fa-newspaper"></i>New York Times Search</div>
 
     <div class="container">
-        
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="searchTerm">Search Here:</label>
+                                <input type="text" class="form-control" placeholder="Search">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlSelect1">Number of Records to Retrieve</label>
+                                <select class="form-control" id="exampleFormControlSelect1">
+                                    <option>1</option>
+                                    <option>5</option>
+                                    <option>10</option>
+                                    <option>25</option>
+                                    <option>50</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="searchTerm">Start Year (optional)</label>
+                                <input type="text" class="form-control" placeholder="Year">
+                            </div>
+                            <div class="form-group">
+                                <label for="searchTerm">End Year (optional)</label>
+                                <input type="text" class="form-control" placeholder="Year">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
