--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src="https://kit.fontawesome.com/55a94f0e16.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/55a94f0e16.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,12 +15,15 @@
 
 <body>
 
-    <div class="jumbotron" id="NewYorkTimesJumbo"><i class="far fa-newspaper"></i>New York Times Search</div>
+    <div class="jumbotron" id="NewYorkTimesJumbo"><i class="far fa-newspaper"></i> New York Times Search</div>
 
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="card">
+                    <div class="card-header">
+                        Search Parameters
+                    </div>
                     <div class="card-body">
                         <form>
                             <div class="form-group">
@@ -28,7 +31,7 @@
                                 <input type="text" class="form-control" placeholder="Search">
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Number of Records to Retrieve</label>
+                                <label for="dropDown">Number of Records to Retrieve</label>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1</option>
                                     <option>5</option>
@@ -46,6 +49,14 @@
                                 <input type="text" class="form-control" placeholder="Year">
                             </div>
                         </form>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        Top Articles
+                    </div>
+                    <div class="card-body">
+
                     </div>
                 </div>
             </div>
