--- a/index.html
+++ b/index.html
@@ -14,55 +14,65 @@
 </head>
 
 <body>
-
-    <div class="jumbotron" id="NewYorkTimesJumbo"><i class="far fa-newspaper"></i> New York Times Search</div>
-
-    <div class="container">
+    <div class="main">
         <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header">
-                        Search Parameters
-                    </div>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="searchTerm">Search Here:</label>
-                                <input type="text" class="form-control" placeholder="Search">
-                            </div>
-                            <div class="form-group">
-                                <label for="dropDown">Number of Records to Retrieve</label>
-                                <select class="form-control" id="exampleFormControlSelect1">
-                                    <option>1</option>
-                                    <option>5</option>
-                                    <option>10</option>
-                                    <option>25</option>
-                                    <option>50</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="searchTerm">Start Year (optional)</label>
-                                <input type="text" class="form-control" placeholder="Year">
-                            </div>
-                            <div class="form-group">
-                                <label for="searchTerm">End Year (optional)</label>
-                                <input type="text" class="form-control" placeholder="Year">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-header">
-                        Top Articles
-                    </div>
-                    <div class="card-body">
-
-                    </div>
-                </div>
+            <div class="col-1"></div>
+            <div class="col-10">
+                <div class="jumbotron" id="NewYorkTimesJumbo"><i class="far fa-newspaper"></i> New York Times Search</div>
             </div>
+            <div class="col-1"></div>
         </div>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-10">
+                    <div class="card">
+                        <div class="card-header">
+                            Search Parameters
+                        </div>
+                        <div class="card-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="searchTerm">Search Here:</label>
+                                    <input type="text" class="form-control" placeholder="Search">
+                                </div>
+                                <div class="form-group">
+                                    <label for="dropDown">Number of Records to Retrieve</label>
+                                    <select class="form-control" id="exampleFormControlSelect1">
+                                        <option>1</option>
+                                        <option>5</option>
+                                        <option>10</option>
+                                        <option>25</option>
+                                        <option>50</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="searchTerm">Start Year (optional)</label>
+                                    <input type="text" class="form-control" placeholder="Year">
+                                </div>
+                                <div class="form-group">
+                                    <label for="searchTerm">End Year (optional)</label>
+                                    <input type="text" class="form-control" placeholder="Year">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            Top Articles
+                        </div>
+                        <div class="card-body">
+    
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+            </div>
+    
+        </div>
     </div>
+
 
 
 
