--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
                                     <label for="searchTerm">End Year (optional)</label>
                                     <input type="text" class="form-control" placeholder="Year">
                                 </div>
+                                <button type="button" class="btn btn-primary">Search</button>
+                                <button type="button" class="btn btn-secondary">Clear</button>
                             </form>
                         </div>
                     </div>
+                    <br>
                     <div class="card">
                         <div class="card-header">
                             Top Articles
@@ -76,7 +79,7 @@
 
 
 
-    <script src="./assets/main.js"></script>
+    <script src="./main.js"></script>
     <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
 </body>
