--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                                 <input type="text" class="form-control" placeholder="Year">
                             </div>
                         </form>
+                        <button type="button" class="btn btn-primary">Search</button>
+                        <button type="button" class="btn btn-primary">Reset</button>
                     </div>
                 </div>
                 <div class="card">
