--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="dropDown">Number of Records to Retrieve</label>
-                                <select class="form-control" id="exampleFormControlSelect1">
+                                <select class="form-control" id="numberSelector">
                                     <option>1</option>
                                     <option>5</option>
                                     <option>10</option>
@@ -52,7 +52,7 @@
                             </div>
                         </form>
                         <button type="button" class="btn btn-primary">Search</button>
-                        <button type="button" class="btn btn-primary">Reset</button>
+                        <button type="button" class="btn btn-secondary">Reset</button>
                     </div>
                 </div>
                 <div class="card">
