added ids to start year and end year form fields

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="searchTerm">Start Year (optional)</label>
-                                <input type="text" class="form-control" placeholder="Year">
+                                <input type="text" class="form-control" id="startYear" placeholder="Year">
                             </div>
                             <div class="form-group">
                                 <label for="searchTerm">End Year (optional)</label>
-                                <input type="text" class="form-control" placeholder="Year">
+                                <input type="text" class="form-control" id="endYear" placeholder="Year">
                             </div>
                         </form>
                         <button type="button" class="btn btn-primary">Search</button>
